crates/toml/tests/snapshots/invalid/key/end-in-escape.stderr
TOML parse error at line 1, column 29
  |
1 | "backslash is the last char\
  |                             ^
key with no value, expected `=`
